<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/id_tv_sectiontwo_label1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_sectiontwo_label1"
                    android:textStyle="bold"
                    android:textSize="13sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_sectiontwo_label2"
                    android:textSize="10sp"
                    android:textColor="@android:color/darker_gray"
                    android:layout_below="@id/id_tv_sectiontwo_label1"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/id_tv_sectiontwo_label3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_sectiontwo_label3"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:layout_marginLeft="30dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_sectiontwo_label4"
                    android:textSize="10sp"
                    android:textColor="@android:color/darker_gray"
                    android:layout_below="@id/id_tv_sectiontwo_label3"
                    android:layout_alignLeft="@id/id_tv_sectiontwo_label3"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/id_tv_sectiontwo_label5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_sectiontwo_label5"
                    android:textStyle="bold"
                    android:textSize="13sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_sectiontwo_label6"
                    android:textSize="10sp"
                    android:textColor="@android:color/darker_gray"
                    android:layout_below="@id/id_tv_sectiontwo_label5"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/id_tv_sectiontwo_label7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_sectiontwo_label7"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:layout_marginLeft="30dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_sectiontwo_label8"
                    android:textSize="10sp"
                    android:textColor="@android:color/darker_gray"
                    android:layout_below="@id/id_tv_sectiontwo_label7"
                    android:layout_alignLeft="@id/id_tv_sectiontwo_label7"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>